# django-lightrag

./: .gitignore  README.md  pyproject.toml
django_lightrag/: core.py  query_engine.py
django_lightrag/core/: __init__.py  apps.py  core.py  models.py  schemas.py  storage.py  urls.py  views.py
django_lightrag/core/management/commands/: ingest_document.py  list_documents.py  query_rag.py
django_lightrag/core/migrations/: 0001_initial.py  0002_remove_document_title.py
django_lightrag/lightrag_app/: apps.py  core.py  entity_extraction.py  schemas.py  signals.py  urls.py
django_lightrag/lightrag_app/management/commands/: ingest_document.py  list_documents.py  query_rag.py
django_lightrag/lightrag_app/migrations/: 0002_remove_textchunk_and_chunk_relations.py  0003_rename_documentstatus_fields.py  0004_delete_chunkconfig.py  0005_merge_20260315_2144.py  0006_remove_file_fields.py  0007_remove_documentstatus.py  0008_alter_vectorembedding_vector_type.py
django_lightrag/tests/: settings.py  test_query_flow.py
djangorag/lightrag_app/: apps.py  core.py  entity_extraction.py  models.py  storage.py  views.py
djangorag/lightrag_app/management/commands/: create_default_chunk_config.py  list_documents.py
djangorag/lightrag_app/migrations/: 0001_initial.py  0002_chunk_config.py  0003_remove_workspace_created_by_and_more.py
djangorag/lightrag_app/tests/: test_api.py  test_chunk_config.py  test_core.py  test_models.py
lightrag_app/: apps.py  core.py  models.py  schemas.py  signals.py  storage.py  urls.py  views.py
lightrag_app/management/commands/: create_workspace.py  ingest_document.py  list_documents.py  query_rag.py
lightrag_app/migrations/: 0001_initial.py
lightrag_app/tests/: conftest.py  test_api.py  test_core.py  test_models.py
